<resources>
    <string name="app_name">E-POSYANDU</string>
    <string name="login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="ProgramKesehatan">Program Kesehatan</string>
    <string name="tanggal">Tanggal</string>
    <string name="DaftarAnak">Daftar Anak</string>
    <string name="namaAnak">Nama Anak</string>
    <string name="Detail">Detail</string>
    <string name="DetailPenimbangan">Detail Penimbangan</string>
    <string name="bb">BB</string>
    <string name="tb">TB</string>
    <string name="RiwayatPenyakit">Riwayat Penyakit</string>
    <string name="JenisVitamin">Jenis Vitamin</string>
    <string name="Keterangan">Keterangan</string>
    <string name="titikdua">:</string>
    <string name="DetailCatatanBumil">Detail Catatan Bumil</string>
    <string name="TekananDarah">Tekanan Darah</string>
    <string name="UmurKehamilan">Umur Kehamilan</string>
    <string name="Keluhan">Keluhan</string>
    <string name="ImunisasiTT">Imunisasi TT</string>
    <string name="TabletTambahDarah">Tablet Tambah Darah</string>
    <string name="Catatan">Catatan</string>
    <string name="DetailPenimbanganBumil">Detail Penimbangan Bumil</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_anak">Anak</string>
    <string name="menu_bumil">Ibu Hamil</string>
    <string name="menu_lansia">Lansia</string>
    <string name="menu_logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="DaftarIbuHamil">Daftar Ibu Hamil</string>
    <string name="namaBumil">Nama Ibu Hamil</string>
    <string name="DaftarLansia">Daftar Lansia</string>
    <string name="namaLansia">Nama Lansia</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="JadwalImunisasi">Jadwal imunisasi</string>
    <string name="namaImunisasi">Nama Imunisasi</string>
    <string name="status">Status</string>
    <string name="email">Email</string>
    <string name="CatatanPenimbangan">Catatan Penimbangan Anak</string>
    <string name="CatatanPenimbanganBumil">Catatan Penimbangan Bumil</string>
    <string name="CatatanKesehatanBumil">Catatan Kesehatan Bumil</string>
    <string name="CatatanKesehatanLansia">Catatan Kesehatan Lansia</string>
    <string name="DetailPenimbanganAnak">Detail Penimbangan Anak</string>
    <string name="CatatanPemeriksaanBumil">Catatan Pemeriksaan Ibu hamil</string>
    <string name="JadwalLansia">Jadwal Lansia</string>
    <string name="CatatanPemeriksaanLansia">Catatan Pemeriksaan Lansia</string>
    <string name="DetailPemeriksaanLansia">"Detail Pemeriksaan "</string>
    <string name="beratBadan">Berat Badan</string>
    <string name="tinggibadan">Tinggi Badan</string>
    <string name="LingkarPinggang">Lingkar Pinggang</string>
    <string name="Glukosa">Gula darah</string>
    <string name="LemakTubuh">Lemak Tubuh</string>
    <string name="LemakPerut">Lemak Perut</string>
    <string name="IMT">IMT</string>
    <string name="Kolesterol">Kolesterol</string>
    <string name="AsamUrat">Asam Urat</string>
    <string name="Merokok">Merokok</string>
    <string name="Posyandu">Pos Pelayanan Terpadu</string>
    <string name="JadwalBumil">Jadwal Ibu Hamil</string>
    <string name="Hemoglobin">Hemoglobin</string>
    <string name="HTP">HTP</string>
    <string name="HPHT">HPTH</string>
    <string name="HamilKe">Hamil ke</string>
    <string name="PersalinanKe">Persalinan ke</string>
    <string name="JumlahKeguguran">Jumlah keguguran</string>
    <string name="JenisImunisasi">Jenis Imunisasi</string>
    <string name="IMP">IMP</string>
    <string name="KIA">KIA</string>
    <string name="Account">Akun</string>
    <string name="menu_about">Tentang</string>
    <string name="IbuHamilResikoTinggi">Ibu hamil resiko tinggi</string>
    <string name="GPA">G/P/A</string>
    <string name="Asuransi">Asuransi</string>
    <string name="ResikoTinggi">Resiko Tinggi</string>
    <string name="HPL">HPL</string>
    <string name="WaliBumil">Wali Bumil</string>
    <string name="waktu">Waktu</string>
    <string name="default_notification_channel_id">Posyandu</string>
    <string name="penyakit">Penyakit</string>
    <string name="DetailPemeriksaanBumil">Detail Pemeriksaan Ibu Hamil</string>
    <string name="tentangAplikasi">Tentang Aplikasi</string>
    <string name="InfoAkun">Info Akun</string>
    <string name="submit">Kirim</string>
    <string name="BackToLogin">Back to login</string>
    <string name="VerificationCode">Kode Verifikasi</string>
    <string name="comform_password">Masukan Ulang Password</string>
    <string name="lorem">LOrekmajdfkndhfbdjgahvgsdvagshdsvadghavshdgcasdghacsdhgscdahgdcasdhasdcgasdsdhjasdhsadvsjahdahdahsdkjhwrgkyerbif</string>
    <string name="EditProfile">Edit Profiles</string>
    <string name="nama">Nama</string>
    <string name="KonfirmasiPassword">Konfirmasi Password</string>
    <string name="GantiPassword">Ubah Password</string>
    <string name="jenis_imunisasi">Jenis Imunisasi</string>
    <string name="status_imunisasi_anak">Status Imunisasi Anak</string>
    <string name="tanggal_imunisasi">Tanggal Imunisasi</string>
    <string name="grafik_penimbangan">Grafik Penimbangan</string>
    <string name="tanggal_penimbangan">Tanggal Penimbangan ( Umur dalam bulan )</string>
</resources>