<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:title="Data"
        android:id="@+id/master">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_anak"
                    android:icon="@drawable/ic_feed"
                    android:title="@string/menu_anak" />
                <item
                    android:id="@+id/nav_bumil"
                    android:icon="@drawable/ic_feed"
                    android:title="@string/menu_bumil" />
                <item
                    android:id="@+id/nav_lansia"
                    android:icon="@drawable/ic_feed"
                    android:title="@string/menu_lansia" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/menu_logout" />
            </group>
        </menu>
    </item>

</menu>