<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailBumilActivity">

    <ImageView
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="14dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="14dp"
        android:text="@string/Detail"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/backbutton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/DetailCatatanBumil"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvToolbar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <TableRow android:layout_marginTop="20dip">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/tanggal"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/titikdua"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTanggal"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                />
        </TableRow>


        <TableRow android:layout_marginTop="20dip">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/bb"
                android:textColor="@color/black"
                android:textSize="18sp"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/titikdua"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvBeratBadan"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/bb"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                />
        </TableRow>


        <TableRow android:layout_marginTop="20dip">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/TekananDarah"
                android:textColor="@color/black"
                android:textSize="18sp"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/titikdua"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTekananDarah"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/TekananDarah"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                />
        </TableRow>


        <TableRow android:layout_marginTop="20dip">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/UmurKehamilan"
                android:textColor="@color/black"
                android:textSize="18sp"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/titikdua"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvUmurKehamilan"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/UmurKehamilan"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                />
        </TableRow>


        <TableRow android:layout_marginTop="20dip">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/Keluhan"
                android:textColor="@color/black"
                android:textSize="18sp"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/titikdua"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvKeluhan"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Keluhan"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                />
        </TableRow>


        <TableRow android:layout_marginTop="20dip">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/ImunisasiTT"
                android:textColor="@color/black"
                android:textSize="18sp"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/titikdua"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvImunisasiTT"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/ImunisasiTT"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                />
        </TableRow>

        <TableRow android:layout_marginTop="20dip">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/TabletTambahDarah"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/titikdua"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTabletTambahDarah"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/TabletTambahDarah"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                />
        </TableRow>

        <TableRow android:layout_marginTop="20dip">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/Catatan"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/titikdua"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCatatan"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Catatan"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>